Refactor AEM plugin services and utils for clarity
Refactored several classes in the AEM plugin to improve code readability and maintainability. Introduced helper methods in TurAemAttrUtils for tag facet handling, streamlined TurAemContentMappingService attribute specification collection, and updated TurAemObjectService to provide single-object retrieval and conditional publishing. Adjusted TurAemPluginProcess to use new object retrieval logic and removed unused dependency from TurAemJobService.