@@ -1,11 +1,10 @@
 package com.viglet.turing.connector.plugin.aem.service;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
-
 import org.jetbrains.annotations.NotNull;
 import org.springframework.stereotype.Component;
-
 import com.viglet.turing.client.sn.job.TurSNAttributeSpec;
 import com.viglet.turing.connector.aem.commons.mappers.TurAemContentMapping;
 import com.viglet.turing.connector.aem.commons.mappers.TurAemModel;
@@ -26,13 +25,16 @@ public class TurAemContentMappingService {
         public TurAemContentMappingService(TurAemPluginModelRepository turAemPluginModelRepository,
                         TurAemAttributeSpecificationRepository turAemAttributeSpecificationRepository) {
                 this.turAemPluginModelRepository = turAemPluginModelRepository;
-                this.turAemAttributeSpecificationRepository = turAemAttributeSpecificationRepository;
+                this.turAemAttributeSpecificationRepository =
+                                turAemAttributeSpecificationRepository;
         }
 
         public @NotNull TurAemContentMapping getTurAemContentMapping(TurAemSource turAemSource) {
-                return TurAemContentMapping.builder().deltaClassName(turAemSource.getDeltaClass())
+                return TurAemContentMapping.builder()
+                                .deltaClassName(turAemSource.getDeltaClass())
                                 .models(getTurAemModels(turAemSource))
-                                .targetAttrDefinitions(getTurSNAttributeSpecs(turAemSource))
+                                .targetAttrDefinitions(
+                                                collectTurSNAttributeSpecifications(turAemSource))
                                 .build();
         }
 
@@ -46,7 +48,8 @@ public class TurAemContentMappingService {
                                 .toList();
         }
 
-        private static @NotNull List<TurAemTargetAttr> getTurAemTargetAttrs(TurAemPluginModel pluginModel) {
+        private static @NotNull List<TurAemTargetAttr> getTurAemTargetAttrs(
+                        TurAemPluginModel pluginModel) {
                 return pluginModel.getTargetAttrs().stream()
                                 .map(targetAttr -> TurAemTargetAttr.builder()
                                                 .name(targetAttr.getName())
@@ -55,7 +58,8 @@ public class TurAemContentMappingService {
                                 .collect(Collectors.toList());
         }
 
-        private static @NotNull List<TurAemSourceAttr> getTurAemSourceAttrs(TurAemTargetAttribute targetAttr) {
+        private static @NotNull List<TurAemSourceAttr> getTurAemSourceAttrs(
+                        TurAemTargetAttribute targetAttr) {
                 return targetAttr.getSourceAttrs().stream()
                                 .map(sourceAttr -> TurAemSourceAttr.builder()
                                                 .className(sourceAttr.getClassName())
@@ -64,15 +68,17 @@ public class TurAemContentMappingService {
                                 .toList();
         }
 
-        private @NotNull List<TurSNAttributeSpec> getTurSNAttributeSpecs(TurAemSource turAemSource) {
+        private @NotNull List<TurSNAttributeSpec> collectTurSNAttributeSpecifications(
+                        TurAemSource turAemSource) {
                 return turAemAttributeSpecificationRepository.findByTurAemSource(turAemSource)
                                 .map(attributeSpecifications -> attributeSpecifications.stream()
                                                 .map(this::mapToTurSNAttributeSpec)
-                                                .toList())
-                                .orElse(List.of());
+                                                .collect(Collectors.toList()))
+                                .orElse(new ArrayList<>());
         }
 
-        private TurSNAttributeSpec mapToTurSNAttributeSpec(TurAemAttributeSpecification attributeSpec) {
+        private TurSNAttributeSpec mapToTurSNAttributeSpec(
+                        TurAemAttributeSpecification attributeSpec) {
                 return TurSNAttributeSpec.builder()
                                 .className(attributeSpec.getClassName())
                                 .name(attributeSpec.getName())
